cabal-version:      3.4
name:               ratatasker
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             danielambda
maintainer:         daniel.gevorgyan25@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ratatasker
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        telegram-bot-simple ^>=0.14.4,
        telegram-bot-api^>=7.4.3,
        text^>=2.0.2,
        mtl^>=2.3.1,
        sqlite-simple^>=0.4.19,
    hs-source-dirs:   app
    default-language: GHC2021
