cabal-version:      3.4
name:               ratatasker
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             danielambda
maintainer:         daniel.gevorgyan25@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable ratatasker
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Actions,
        Persistence,
        Models,
        TelegramUtils,
    build-depends:
        base ^>=4.19.1.0,
        telegram-bot-simple ^>=0.14.4,
        telegram-bot-api^>=7.4.3,
        text^>=2.1.1,
        mtl^>=2.3.1,
        sqlite-simple^>=0.4.19,
        dotenv^>=0.12.0.0,
        servant-client^>=0.20.2,
    hs-source-dirs:   app
    default-language: GHC2021
